--- a/semantic.html
+++ b/semantic.html
@@ -59,7 +59,7 @@
     </div>
     
     <footer>
-        <p>&copy; Обучение по профессии Верстальщик от Annblok</p>
+        <p>&copy; Обучение по профессии Верстальщик от <a href="#">Annblok</a></p>
     </footer>
 </body>
 </html>
